# mariana-conceptual-networks

./: .gitignore  Pipfile  requirements.txt  text-extraction.md
docs/: Appendix 1.docx
src/orange-pipeline/: example-workflow.ows
src/text-extraction-js/: csemod04group10_40439_2420078_Practicum N°2_ Electrochemical cell LAB REPORT.txt  csemod04group10_LATE_40439_2412558_LAB journal lab2 MO4 jaap weterings.txt  csemod04group2_39421_2401195_Determination_of_effect_of_cation_concentration_on_the_electromotive_force (2).txt  csemod04group2_39421_2401196_M4 Experiment 2 (2).txt  csemod04group2_39421_2401197_Lab journal exp 2.txt  csemod04group2_39421_2407197_Lab report exp2.txt  index.js  package.json
src/text-extraction-py/: README.md  anonymize.py  complement.py  example.ipynb  extract.py  setup.cfg
src/text-extraction-py/eac_py/: anonymize.py  complement.py  extract.py
src/text-extraction-py/eac_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/text-extraction-r/: Files_to_txt.R
