[metadata]
name = eac-py
version = 0.0.1
author = Karel A. Kroeze
author_email = k.a.kroeze@utwente.nl
description = Wrapper package for common text operations on student reports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BDSI-UTwente/eac-py

[options]
packages = eac_py
python_requires = >=3.9
install_requires = 
    pymupdf
    tika
    spacy
    docx2pdf
    fuzzysearch
    fuzzywuzzy
    python-levenshtein
